# Mivar

./: .gitignore  CMakeLists.txt  CMakeLists.txt.user.4.9-pre1  main.cpp  resources.qrc
models/: IObservable.cpp  IObservable.h  IObserver.h  MivarClass.cpp  MivarClass.h  MivarModel.cpp  MivarModel.h  MivarObject.cpp  MivarObject.h  MivarRelation.cpp  MivarRelation.h  MivarRule.cpp  MivarRule.h
res/graph/: index.html
services/: GraphService.cpp  GraphService.h  ModelLoader.cpp  ModelLoader.h  ParamCalculator.cpp  ParamCalculator.h  SingleJSEngine.h
ui/: ClassList.cpp  ClassList.h  ClassOptions.cpp  ClassOptions.h  ClassOptions.ui  ClassTree.cpp  ClassTree.h  ClassTree.ui  HomeWidget.cpp  HomeWidget.h  HomeWidget.ui  MainContainer.cpp  MainContainer.h  MainWindow.cpp  MainWindow.h  MainWindow.ui  ParamCalculateForm.cpp  ParamCalculateForm.h  ParamCalculateForm.ui  ParameterOptions.cpp  ParameterOptions.h  ParameterOptions.ui  Project.cpp  Project.h  RelationOptions.cpp  RelationOptions.h  RelationOptions.ui  RelationTree.cpp  RelationTree.h  RelationTree.ui  ResetableWidget.h  RuleOptions.cpp  RuleOptions.h  RuleOptions.ui  mainwindow.cpp  mainwindow.ui
ui/components/: NameIdListModel.cpp  NameIdListModel.h  TreeClassDetail.cpp  TreeClassDetail.h  TreeParamDetail.cpp  TreeParamDetail.h  TreeRelationDetail.cpp  TreeRelationDetail.h  TreeRuleDetail.cpp  TreeRuleDetail.h  TreeView.cpp  TreeView.h
ui/components/calculateTree/: CalculateTreeClass.cpp  CalculateTreeClass.h  CalculateTreeParam.cpp  CalculateTreeParam.h
ui/components/modelTree/: TreeClassDetail.cpp  TreeClassDetail.h  TreeParamDetail.h
ui/components/relationsTree/: TreeRelationDetail.cpp  TreeRelationDetail.h  TreeRuleDetail.cpp  TreeRuleDetail.h
